--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "pfa-with-next",
   "version": "0.1.0",
   "private": true,
+  "browser": {
+    "child_process": false,
+    "fs": false
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,10 +13,17 @@
     "export": "next export"
   },
   "dependencies": {
+    "@google-cloud/translate": "^6.2.6",
+    "child_process": "^1.0.2",
     "firebase": "^8.7.1",
+    "fs": "0.0.1-security",
+    "google-auth-library": "^7.6.1",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
+    "net": "^1.0.2",
     "next": "^11.0.1",
+    "next-images": "^1.8.1",
+    "next-optimized-images": "^2.6.2",
     "next-pwa": "^5.2.24",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
@@ -28,5 +39,18 @@
     "gulp-sass": "^5.0.0",
     "react-router-dom": "^5.2.0",
     "uuid": "^8.3.2"
-  }
+  },
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "main": "gulpfile.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/BulgakViktoriya14/PFA-next.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/BulgakViktoriya14/PFA-next/issues"
+  },
+  "homepage": "https://github.com/BulgakViktoriya14/PFA-next#readme"
 }
