--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "google-auth-library": "^7.6.1",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
+    "imagemin-mozjpeg": "^9.0.0",
     "net": "^1.0.2",
     "next": "^11.0.1",
     "next-images": "^1.8.1",
@@ -30,13 +31,16 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
-    "sass": "^1.35.2"
+    "responsive-loader": "^2.3.0",
+    "sass": "^1.35.2",
+    "sharp": "^0.28.3"
   },
   "devDependencies": {
     "eslint": "7.31.0",
     "eslint-config-next": "11.0.1",
     "gulp-next": "^1.0.9",
     "gulp-sass": "^5.0.0",
+    "react-optimized-image": "^0.4.1",
     "react-router-dom": "^5.2.0",
     "uuid": "^8.3.2"
   },
