--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@google-cloud/translate": "^6.2.6",
+    "chartist": "^0.11.4",
     "child_process": "^1.0.2",
     "firebase": "^8.7.1",
     "fs": "0.0.1-security",
@@ -28,6 +29,7 @@
     "next-pwa": "^5.3.1",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
+    "react-chartist": "^0.14.4",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
