--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Next PWA demo",
-  "short_name": "Next PWA",
+  "name": "PFA",
+  "short_name": "PFA",
   "icons": [
     {
       "src": "/icon-small.png",
